<resources>
    <string name="file">File</string>
    <string name="tap_to_select_file">File (tap to select)</string>
    <string name="text">Text</string>
    <string name="submit">Submit</string>
    <string name="language_pair">Language pair</string>
    <string name="name">Name</string>
    <string name="enter_name_of_the_dialog">Enter name of the dialog</string>
    <string name="translate_text_via_google_translate">Translate text via Google translate</string>
    <string name="translation">Translation</string>
    <string name="err_text_is_empty">Text is empty</string>
    <string name="no_google_translate">No Google Translation Installed</string>
    <string name="filename_required">File name is required</string>
    <string name="name_required">Dialog name is required</string>
    <string name="source_language_required">Audio language is required</string>
    <string name="dest_language_required">Translations name is required</string>
</resources>