<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditDialogFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:navigationIcon="@drawable/arrowback"
        app:title="Add dialog" />

    <TextView
        android:id="@+id/textLangPair"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:labelFor="@id/spinnerLangPair"
        android:text="@string/language_pair"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Spinner
        android:id="@+id/spinnerLangPair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/textLangPair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textLangPair" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldFile"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerLangPair">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFieldFileName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="start"
            android:gravity="center_vertical|start"
            android:hint="@string/tap_to_select_file"
            android:inputType="none"
            android:paddingStart="5dp"
            android:focusable="false"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldFile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFieldName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="start"
            android:gravity="center_vertical|start"
            android:hint="@string/enter_name_of_the_dialog"
            android:inputType="text"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textText"
        android:text="@string/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:labelFor="@id/fieldText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fieldName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textText"
        app:layout_constraintBottom_toTopOf="@id/guidelineTexts">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFieldText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <TextView
        android:id="@+id/textTranslation"
        android:text="@string/translation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:labelFor="@id/fieldTranslation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonTranslation"
        app:layout_constraintBottom_toBottomOf="@id/buttonTranslation"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTranslation"
        style="@style/Widget.App.Button.OutlinedButton.IconOnly"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:hint="@string/translate_text_via_google_translate"
        app:icon="@drawable/translation"
        app:iconGravity="textEnd"
        app:iconTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/textTranslation"
        app:layout_constraintTop_toBottomOf="@id/guidelineTexts"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.Core.Button.Outlined" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldTranslation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTranslation"
        app:layout_constraintBottom_toTopOf="@id/buttonSubmit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFieldTrans"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:paddingStart="5dp"
            android:paddingTop="0dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0dp"
            app:hintEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        app:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>